# pythonoil

./: .gitignore  PythonOilDailyTracker-Daily.xml  README.md  install-macos-launch-agent.sh  pyproject.toml  run-oil-gui.bat  run-oil-gui.command  run-oil-tracker-background.sh  run-oil-tracker-hidden.ps1  run-oil-tracker.cmd  run-oil-tracker.command  run_oil_tracker_silent.pyw  setup-scheduled-task.ps1  uninstall-macos-launch-agent.sh  windows_gui_entry.py
.github/workflows/: release-windows.yml
PythonOilGUI.app/Contents/: Info.plist
PythonOilGUI.app/Contents/MacOS/: PythonOilGUI
macos/: com.goldshoot0720.pythonoil.plist.template
src/oil_tracker/: __init__.py  brent_spot.py  cli.py  creative.py  creative_art.py  dram_spot.py  fragile_states_index.py  github_stats.py  gme.py  gui.py  henren_channel.py  paths.py  pizza_watch.py  polymarket_event.py  scraper.py  settings.py  storage.py  taiwan_lottery.py  us_debt.py
tests/: test_brent_spot.py  test_creative.py  test_dram_spot.py  test_fragile_states_index.py  test_github_stats.py  test_gui.py  test_paths.py  test_pizza_watch.py  test_polymarket_event.py  test_scraper.py  test_storage.py  test_taiwan_lottery.py  test_us_debt.py
